// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot with custom props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#0BB589",
        "borderWidth": 1,
      },
      {
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      {
        "width": "100%",
      },
      {
        "opacity": 0.5,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
        },
        {
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "#0BB589",
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Custom Snapshot
  </Text>
</View>
`;

exports[`Button matches snapshot with default props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#0BB589",
        "borderWidth": 0,
      },
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "width": "auto",
      },
      {
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
        },
        {
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "#FFFFFF",
          "fontWeight": "500",
        },
        undefined,
      ]
    }
  >
    Snapshot Test
  </Text>
</View>
`;
